<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MathSolver</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="calculator">This is Calculator</string>
    <string name="convertor">This is Convertor</string>
    <string name="area">This is Area</string>
    <string name="volume">This is Volume</string>
    <string name="Len">Length</string>
    <string name="inputSide">Input Side</string>
    <string name="cube">Cube</string>
    
    <string name="edit">0</string>
    
     <string name="len_head">Select Your Unit</string>
     
    <string-array name="length">
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Centimeter</item>
        <item>Milimeter</item>
        <item>Mile</item>
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Decimeter</item>
        <item>Nanometer</item>
        <item>Mircometer</item>
        <item>Light Year</item>
        <item>Angstrom</item>
    </string-array>
    
    <string name="result">Your Result</string>
    <string name="inputNum">Enter your number</string>
    
    <string name="convert">Convert</string>
    <string name="rightFrag">Please Select the option from list.</string>
    
    <string name="areacon">Area</string>
    <string name="volumecon">Volume</string>
    <string name="energy">Energy</string>
    <string name="mass">Mass</string>
    <string name="power">Power</string>
    <string name="pressure">Pressure</string>
    <string name="speed">Speed</string>
    <string name="temp">Temprature</string>
    <string name="time">Time</string>
    <string name="data">Data</string>

    
    <string name="cuboid">Cuboid</string>
    <string name="cone">Cone</string>
    <string name="sphere">Sphere</string>
    <string name="hemi">Hemisphere</string>
    <string name="cylinder">Cylinder</string>
    <string name="pyramid">Pyramid</string>
    <string name="sector">Sector</string>
    <string name="show">Show Details</string>
    <string name="calculate">Calculate</string>
    <string name="inputRadius">Radius</string>
    <string name="inputHeight">Height</string>
    <string name="inputSlHeight">Slant Height</string>
    <string name="inputBreadth">Width</string>
    <string name="inputLength">Length</string>
    
</resources>