<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
<TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/sphere"
        android:gravity="center_horizontal"
        />
 <Spinner 
        android:id="@+id/choice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layerType="software"
        
        />
 <EditText 
        android:id="@+id/radius"
        android:hint="@string/inputRadius"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:inputType="numberDecimal"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        >
        <requestFocus/>
    </EditText>
    
    <EditText 
        android:id="@+id/result"
        android:hint="@string/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:enabled="false"
        android:textSize="25sp"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        />
    <Button 
        android:id="@+id/calculate"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center_horizontal"
        android:background="#8ed8ed"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:textColor="#fff"
        />
    <Button 
        android:id="@+id/show"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:layout_gravity="center_horizontal"
        android:background="#8ed8ed"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:textColor="#fff"
        android:visibility="invisible"
        />
    
</LinearLayout>
